Fixed spacing issue for bottom buttons

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,7 +16,7 @@ header{
     text-align: center;
 }
 header > h1{
-    margin-top: 60px;
+    margin-top: 20px;
 }
 main{
     background-color: lightgray;
@@ -101,7 +101,8 @@ button{
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 80%;
+    height: 75%;
+    margin-bottom: 45px;
 }
 .buttons-bottom{
     display: flex;
